# aiko-ime

./: .gitignore  Cargo.toml  LICENSE  README.md  RELEASE_NOTES.md  build.rs  config.toml.example  crop_icons.py  make_circular.py  process_icons.py  resize_icons.py  split_icons.py
.github/workflows/: build.yml
examples/: tray_demo.rs
proto/: asr.proto
scripts/: Test-PortablePackage.ps1  Test-WindowsSmoke.ps1  build-portable.ps1
src/: lib.rs  main.rs
src/asr/: client.rs  constants.rs  device.rs  doubao_provider.rs  mod.rs  provider.rs  selection.rs
src/audio/: capture.rs  mod.rs
src/business/: hotkey_manager.rs  mod.rs  text_inserter.rs  voice_controller.rs
src/data/: config.rs  credential.rs  mod.rs
src/offline/: README.md  mod.rs  model.rs  sherpa.rs
src/platform/: mod.rs  single_instance.rs  window_target.rs
src/ui/: desktop_pet.rs  floating_button.rs  mod.rs  settings.rs  system_tray.rs
src/ui/pet/: animation.rs  mod.rs  state.rs
tests/: portable-layout.json  repository_contracts.rs
